[tool.poetry]
name = "repl_nix_vjgfrikeolrioei4o3ikqjwsndhfjidekwsmndfbvghrjueikrtudy68594o"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
requests = "^2.28.1"
aiohttp = "^3.8.1"
captcha = "^0.4"
discord = "^2.0.0"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
